Cambios a gráficos para descargar y subir a overleaf
Fix: cambiar nombres para que quedaran en minuscula, dimensiones de los graficos, titulos y demás errores de los gráficos ya existentes

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 Codigo R/grafico_barras.pdf
 Codigo R/tabla_deciles.tex
 Codigo R/tabla_region.tex
+Codigo R/grafico_barras2.pdf
+Codigo R/grafico_dispersion.pdf
+Codigo R/grafico_linea.pdf
+Codigo R/analisis_descriptivo.tex
